# slack-ai-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/slack_ai_agent/: __about__.py  slack.py
src/utils/: secrets_handler.py
tests/: __init__.py  test_secrets_handler.py  test_slack.py
