[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-ai-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kevin Pilch", email = "kev.pilch@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Kevin Pilch/slack-ai-agent#readme"
Issues = "https://github.com/Kevin Pilch/slack-ai-agent/issues"
Source = "https://github.com/Kevin Pilch/slack-ai-agent"

[tool.hatch.version]
path = "src/slack_ai_agent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/slack_ai_agent tests}"

[tool.coverage.run]
source_pkgs = ["slack_ai_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/slack_ai_agent/__about__.py",
]

[tool.coverage.paths]
slack_ai_agent = ["src/slack_ai_agent", "*/slack-ai-agent/src/slack_ai_agent"]
tests = ["tests", "*/slack-ai-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
